# cpp-rust-example

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: my_cpp_lib.h
rust_lib/: Cargo.toml  build.rs
rust_lib/src/: lib.rs
src/: main.cpp  my_cpp_lib.cpp
